objects/Account.object
<CustomObject>
    <fields>
        <fullName>TF_NumberOfPrimaryLOBs__c</fullName>
        <label>Number of Primary LOBs</label>
        <summaryFilterItems>
            <field>AccountLob__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AccountLob__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TF_OwnerIntegrationId__c</fullName>
        <formula>Owner.IntegrationId__c</formula>
        <label>Owner Integration Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_ParentIntegrationId__c</fullName>
        <description>Integration ID Field of the Parent (Used in Integrations)</description>
        <formula>Parent.IntegrationId__c</formula>
        <label>Parent IntegrationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeRegisterNumber__c</fullName>
        <label>Trade Register Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeIcon__c</fullName>
        <formula>CASE( RecordType.DeveloperName, 
&apos;Customer_Global&apos;, IMAGE(&apos;/resource/C5Icon&apos;, &apos;Customer Global&apos;, 22, 22), 
&apos;Customer_Prospect&apos;, IMAGE(&apos;/resource/CPIcon&apos;, &apos;Customer Prospect&apos;, 22, 22),
&apos;Customer_Regional&apos;, IMAGE(&apos;/resource/C2Icon&apos;, &apos;Customer Regional&apos;, 22, 22),
&apos;Customer_Sold_To&apos;, IMAGE(&apos;/resource/CIcon&apos;, &apos;Customer Sold-To&apos;, 22, 22),
&apos;Principal_Global&apos;, IMAGE(&apos;/resource/V5Icon&apos;, &apos;Principal Global&apos;, 22, 22),
&apos;Principal_Supplier&apos;, IMAGE(&apos;/resource/VIcon&apos;, &apos;Principal Supplier&apos;, 22, 22),
&apos;Principal_Regional&apos;, IMAGE(&apos;/resource/V2Icon&apos;, &apos;Principal Regional&apos;, 22, 22),
&apos;Carrier&apos;, IMAGE(&apos;/resource/VTIcon&apos;, &apos;Carrier&apos;, 22, 22),
&apos;Warehouse&apos;, IMAGE(&apos;/resource/VWIcon&apos;, &apos;Warehouse&apos;, 22, 22),
NULL) +  
IF (TEXT(Status__c)= &apos;Not Active&apos;, IMAGE(&apos;/resource/NAIcon&apos;, &apos;Inactive Account&apos;, 22,22),&apos;&apos;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VATNumber__c</fullName>
        <label>VAT Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isValidCompanyDetails__c</fullName>
        <formula>AND (
GeneralEmailAddress__c &lt;&gt; &apos;&apos;, 
InvoiceEmailAddress__c &lt;&gt; &apos;&apos;, 
CoAEmailAddress__c &lt;&gt; &apos;&apos;, 
SDSEmailAddress__c &lt;&gt; &apos;&apos;,   
OrderAcknowledgementEmailAddress__c &lt;&gt; &apos;&apos;, 
VATNumber__c &lt;&gt; null, 
IBANNumber__c &lt;&gt; null,  
VATNumber__c &lt;&gt; null, 
CreditLimit__c &lt;&gt; null, 
PlannedTurnoverperyear__c &lt;&gt; null,  
AverageOrderValue__c &lt;&gt; null,
SRNumber__c &lt;&gt; null,  
CompanyRegNo__c &lt;&gt; null
	)</formula>
        <label>isValidCompanyDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isValidShipping__c</fullName>
        <formula>AND ( 
    NOT ( ISBLANK ( ShippingStreet ) )
    , NOT ( ISBLANK ( ShippingPostalCode ) )  
    , NOT ( ISBLANK ( ShippingCity ) )
    , NOT ( ISBLANK ( ShippingCountry ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Main Address</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Carrier</fullName>
        <active>true</active>
        <description>Carrier (VT)</description>
        <label>Carrier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Global</fullName>
        <active>true</active>
        <description>Customer Global Parent (C5)</description>
        <label>Customer Global</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Prospect</fullName>
        <active>true</active>
        <description>Customer Prospect (CP)</description>
        <label>Customer Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Regional</fullName>
        <active>true</active>
        <description>Customer Regional Parent (C2)</description>
        <label>Customer Regional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Sold_To</fullName>
        <active>true</active>
        <description>Customer Sold To (C)</description>
        <label>Customer Sold To</label>
    </recordTypes>
    <recordTypes>
        <fullName>Principal_Distributor</fullName>
        <active>false</active>
        <description>Local Supplier (V)</description>
        <label>Principal Distributor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Principal_Global</fullName>
        <active>true</active>
        <description>Principal (V5)</description>
        <label>Principal Global</label>
    </recordTypes>
    <recordTypes>
        <fullName>Principal_Logistical</fullName>
        <active>false</active>
        <description>Local Supplier (V)</description>
        <label>Principal Logistical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Principal_Other</fullName>
        <active>false</active>
        <description>Local Supplier (V)</description>
        <label>Principal Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Principal_Regional</fullName>
        <active>true</active>
        <description>Regional Supplier Parent (V2)</description>
        <label>Supplier Regional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Principal_Supplier</fullName>
        <active>true</active>
        <description>Local Supplier (V)</description>
        <label>Supplier Local</label>
    </recordTypes>
    <recordTypes>
        <fullName>Warehouse</fullName>
        <active>true</active>
        <description>Warehouse (VW)</description>
        <label>Warehouse</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AccountNameLengthMax40Chars</fullName>
        <active>true</active>
        <description>Account Name can contain max 40 characters. (Based on GERP rule)

JEBU/SF/081118/Changed implementation of VR for ISNEW() scenario, because IMCD Company is only populated on record in PB. Hence the VR falls true on ISNEW().</description>
        <errorConditionFormula>AND (
	$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c
	, NOT ( $Permission.LockedAccountBypass )
	, IF (
		ISNEW ()
		, NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c, TEXT($User.ImcdCompany__c))) 
		, NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c, TEXT(IMCDCompany__c )))
	)
	, RecordType.DeveloperName = &apos;Customer_Prospect&apos;
	, LEN(Name) &gt; 40 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Data value too large (max length=40)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountShippingPostalCodeLengthMax12</fullName>
        <active>true</active>
        <description>Some fields that will be mastered in GERP (JDE) are restricted to a certain length.

SF/JEBU/081118/Address issue to cope with ISNEW() scenario</description>
        <errorConditionFormula>AND (
	$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c
	, NOT ( $Permission.LockedAccountBypass )
	, IF (
		ISNEW()
		, NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c, TEXT($User.ImcdCompany__c)))
		, NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c, TEXT(IMCDCompany__c)))
	)
	, RecordType.DeveloperName = &apos;Customer_Prospect&apos; 
	, LEN( ShippingPostalCode ) &gt; 12
)</errorConditionFormula>
        <errorDisplayField>ShippingPostalCode</errorDisplayField>
        <errorMessage>Data value too large (max length=12)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountShippingStreetLengthMax40Chars</fullName>
        <active>true</active>
        <description>SF/JEBU/081118/Addressed issue to cope with ISNEW() scenario
SF/MICO/2639/Changed 40 to 160 Chars</description>
        <errorConditionFormula>AND ( 
	$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c
	, NOT ( $Permission.LockedAccountBypass )
	, IF (
		ISNEW()
		, NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c, TEXT($User.ImcdCompany__c)))
		, NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c, TEXT(IMCDCompany__c)))
	)
	, RecordType.DeveloperName = &apos;Customer_Prospect&apos;
	, LEN(  ShippingStreet  ) &gt; 160 
)</errorConditionFormula>
        <errorDisplayField>ShippingStreet</errorDisplayField>
        <errorMessage>Data value too large (max length=160)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountShippingcityLengthMax25Chars</fullName>
        <active>true</active>
        <description>Some fields that will be mastered in GERP (JDE) are restricted to a certain length.

JEBU/SF/081118/Changed implementation of VR to address ISNEW()</description>
        <errorConditionFormula>AND (
	$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c
	, NOT ( $Permission.LockedAccountBypass )
	, IF (
	 	ISNEW ()
		, NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c, TEXT($User.ImcdCompany__c)))
		, NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c, TEXT(IMCDCompany__c)))
	)
	, RecordType.DeveloperName = &apos;Customer_Prospect&apos;
	, LEN( ShippingCity ) &gt; 25 
)</errorConditionFormula>
        <errorDisplayField>ShippingCity</errorDisplayField>
        <errorMessage>Data value too large (max length=25)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockedAccountMainAddress</fullName>
        <active>true</active>
        <description>Account Main Address fields are readonly when the Account.LockedForIntegration flag is set. Restriction relieved for the Custom Permission &quot;LockedAccountBypass&quot; and &quot;AccountMainAddressBypass&quot;</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 
NOT ( $Permission.LockedAccountBypass ), 
NOT ( $Permission.AccountMainAddressBypass ), 
LockedForIntegration__c, 
OR (
ISCHANGED ( ShippingCity ),
ISCHANGED ( ShippingCountryCode ),
ISCHANGED ( ShippingPostalCode ),
ISCHANGED ( ShippingStateCode ),
ISCHANGED ( ShippingStreet )
)
)</errorConditionFormula>
        <errorMessage>You&apos;re not allowed to change the main address of the customer, principals and suppliers. You can edit this information in your ERP system.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockedAccountReadonly</fullName>
        <active>true</active>
        <description>Formula which defines fields which are readonly when the Account.LockedForIntegration flag is set. Restriction relieved for the Custom Permission &quot;LockedAccountBypass&quot;.</description>
        <errorConditionFormula>AND ( 
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c, 
NOT ( $Permission.LockedAccountBypass ), 
LockedForIntegration__c, 
OR (
ISCHANGED ( Name ),
ISCHANGED ( AlphaName__c ),
ISCHANGED ( CurrencyIsoCode ),
ISCHANGED ( Primary_LOB1__c ),
ISCHANGED ( Primary_LOB2__c ),
ISCHANGED ( Primary_LOB3__c ),
ISCHANGED ( ParentId ),
ISCHANGED ( ImcdBusinessUnit__c ),
ISCHANGED ( IMCDCompany__c ),
ISCHANGED ( InvoiceStreet__c ),
ISCHANGED ( InvoiceState__c ),
ISCHANGED ( InvoicePostalCode__c ),
ISCHANGED ( InvoiceCountry__c ),
ISCHANGED ( InvoiceCity__c ),
ISCHANGED ( PaymentTerm__c ),
ISCHANGED ( DUNS_Number__c )
)
)</errorConditionFormula>
        <errorMessage>You&apos;re not allowed to change some of the customer, principals and supplier fields.  You can edit this information in your ERP system.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NotAllowedToCreateC5AndV5</fullName>
        <active>true</active>
        <description>Customer Global/Regional Parents (C5, C2) and Principals (V5,V2) can only be created by IMCD Group (Corporate)</description>
        <errorConditionFormula>AND(
IsNew(),
NOT($Permission.AllowedToCreateC5AndV5),
OR(
RecordType.DeveloperName  = &apos;Customer_Global&apos;, RecordType.DeveloperName = &apos;Customer_Regional&apos;,
RecordType.DeveloperName  = &apos;Principal_Global&apos;, RecordType.DeveloperName = &apos;Principal_Regional&apos;
),
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c 
)</errorConditionFormula>
        <errorMessage>Customer Global/Regional Parents (C5, C2) and Principals (V5,V2) can only be created by IMCD Group (Corporate)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProspectORGlobalParentShouldBeC5ORC2</fullName>
        <active>true</active>
        <description>Prospects can only be linked to Global (C5) OR Regional (C2)</description>
        <errorConditionFormula>IF(
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c = True &amp;&amp; 
RecordType.DeveloperName = &apos;Customer_Prospect&apos; &amp;&amp;
NOT(Parent.RecordType.DeveloperName = &apos;Customer_Global&apos; || Parent.RecordType.DeveloperName = &apos;Customer_Regional&apos; ) &amp;&amp;
NOT(ISBLANK(ParentId)),
true,
false)</errorConditionFormula>
        <errorDisplayField>ParentId</errorDisplayField>
        <errorMessage>Prospect Parent must be C5 or C2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProspectParentMustExistInERP</fullName>
        <active>true</active>
        <description>Prospects can only be linked to Global (C5) OR Regional (C2) and should be integrated with other backend systems</description>
        <errorConditionFormula>IF(
$Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c = True &amp;&amp; 
NOT ( $Permission.LockedAccountBypass ) &amp;&amp;
ISBLANK(Parent.JdeId__c) &amp;&amp; 
ISBLANK(Parent.PsftId__c) &amp;&amp; 
NOT(ISBLANK(ParentId)),
true,
false)</errorConditionFormula>
        <errorDisplayField>ParentId</errorDisplayField>
        <errorMessage>Prospect Parent must be integrated</errorMessage>
    </validationRules>
</CustomObject>